# uibk_ps_parsys

./: CMakeLists.txt
Benchmarking/: test2.sh
Exercise04/: benshmark.sh  merge_intel_Core_i5.txt  montecarlo_Core_i5(intel).txt
Exercise04/Algorithms/: MergeSort.cpp  Queens.cpp
Exercise04/UnitTests/: unit_bubble.sh  unit_queens.sh
Exercise04/i7-6500U_CPU_2.50GHz/: merge.txt  mergeSort.txt  monte.txt  qq.txt
exercise01/: README.md  exercise1.txt  mmul.cpp  mmulO0.txt  mmulO3.txt  mmulOpenMP.cpp  mmulOpt.cpp  mmul_loopunroll.cpp  openMP.txt  outfinal.txt  test.sh
exercise01/AMD_A8-7410_APU/: out.txt  out_unroll.txt
exercise01/Celeron(R) Dual-Core CPU       T3500  @ 2.10GHz/: outfinal.txt  text.txt
exercise01/i7-6500U_CPU_2.50GHz/: out.txt  outOpenMP.txt  outOpt.txt
exercise02/: 0  OurAnswers.md  README.md  READMEE.md  gmon.out  mmul  mmul.cpp  mmulInd  mmulInd.txt  mmulMulti  mmulMulti.txt  mmulNvector.txt  mmulgp.txt  test.sh
exercise02/AMD_A8-7410_APU/: mmul.txt  mmulOpenMP.txt  mmulOpenMP_2.txt  mmulOpt.txt
exercise02/Celeron_Duel_Core/: mmul  mmulOp  mmulOpmp
exercise02/Code/: benchmark.sh  mmul.cpp  mmulOpt.cpp  mmul_opt_par.cpp
exercise02/i7-6500U_CPU_2.50GHz/: mmul.txt  mmulOpenMP.txt  (+1 more)
exercise04/: benshmark.sh  queens_Core_i5(intel).txt
exercise06/: AVL.cpp  AVL.txt  AVL2.txt  AVL3.txt  AVLBenshmark.sh  avl.cpp  avlOmp.cpp  catch.hpp
exercise08/: MonteCarlo (1).cpp  stencil2DOpt.cpp
exercise09/: job_script.sh  stencil2D.cpp  stencil2DNoBlock.cpp
exercise10/: mmulmpi.cpp  queens.cpp  queens.sh  stencil2D.cpp  stencil2DNoBlock.cpp
(+14 files in other folders)
